--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,13 @@
       {
         "html-has-lang": "off"
       }
+    ],
+    "meta-viewport": "off",
+    "axe/text-alternatives": [
+      "default",
+      {
+        "document-title": "off"
+      }
     ]
   }
 }
